# OculusOpenXRTemplateProject

./: .gitignore  CMakeLists.txt  README.md  settings.gradle
OpenXR/: CMakeLists.txt
OpenXR/src/: CMakeLists.txt
OpenXR/src/tests/: CMakeLists.txt
app/: build.gradle
app/src/androidTest/java/com/example/oculusopenxrtemplateproject/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/oculusopenxrtemplateproject/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
hello_xr/: CMakeLists.txt
